<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/primary_border">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/searchByCity"
              android:textColor="@color/colorPrimary"
              android:fontFamily="@font/poppins_regular"
              android:textStyle="bold"
              android:padding="10dp"/>
    <View android:layout_width="wrap_content"
          android:layout_height="1dp"
          android:background="@color/colorPrimary"/>
    <TextView
            android:id="@+id/tvCity1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muscat"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingTop="10dp"/>
    <TextView
            android:id="@+id/tvCity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nizwa"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingTop="10dp"/>

    <TextView
            android:id="@+id/tvCity3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sur"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingTop="10dp"/>
    <TextView
            android:id="@+id/tvCity4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salalah"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingTop="10dp"/>
</LinearLayout>