<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/lightGrey"
android:orientation="vertical"
android:layout_margin="10dp">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/thankYou"
              android:textStyle="bold"
              android:textSize="30sp"
              android:layout_marginTop="20dp"
              android:fontFamily="@font/poppins_regular"
              android:textColor="@color/colorPrimary"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/forYourOrder"
              android:textStyle="bold"
              android:textAllCaps="true"
              android:layout_marginTop="10dp"
              android:fontFamily="@font/poppins_regular"
              android:textColor="@color/mediumGrey"/>
    <ImageView android:layout_width="250dp"
               android:layout_height="200dp"
               android:src="@drawable/ic_delivery"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/estimateDelivery"
              android:textSize="20sp"
              android:fontFamily="@font/poppins_regular"
              android:textColor="@color/colorPrimary"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Monday, 25 Feb 2019"
              android:textStyle="bold"
              android:fontFamily="@font/poppins_regular"
              android:textColor="@color/mediumGrey"/>
    <Button
            android:id="@+id/btnThankYouContinue" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:text="@string/continueShopping"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"/>
</LinearLayout>