<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity"
        android:background="@drawable/bg"
        android:padding="20dp">

    <ImageView
            android:id="@+id/ivLoginBack"
            style="@style/small_icons"
            android:src="@drawable/ic_back_press"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"/>
    <TextView
            android:id="@+id/tvEnterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterEmailAddress"
            android:layout_above="@+id/rlLoginEmail"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"/>
    <RelativeLayout
            android:id="@+id/rlLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/tvEnterPassword">
        <ImageView
                style="@style/small_icons"
                   android:src="@drawable/ic_email"
                   android:id="@+id/ivLoginEmail"
                   android:layout_alignParentStart="true"
                   android:layout_centerVertical="true"/>
        <EditText
                android:id="@+id/etLoginEmail"
                android:layout_toEndOf="@id/ivLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="15sp"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textEmailAddress"
                android:hint="@string/emailAddress"/>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_below="@id/etLoginEmail"
              android:background="@android:color/white"/>
    </RelativeLayout>
    <TextView
            android:id="@+id/tvEnterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterPassword"
            android:layout_above="@+id/rlLoginPassword"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"/>
    <RelativeLayout
            android:id="@+id/rlLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        <ImageView
                style="@style/small_icons"
                   android:src="@drawable/ic_password"
                   android:id="@+id/ivLoginPassword"
                   android:layout_alignParentStart="true"
                   android:layout_centerVertical="true"/>
        <EditText
                android:id="@+id/etLoginPassword"
                android:layout_toEndOf="@id/ivLoginPassword"
                android:layout_toStartOf="@+id/ivLoginHidePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="15sp"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:hint="@string/password"/>
     <!--   <ImageView
                style="@style/small_icons"
                   android:src="@drawable/ic_hide_pass"
                   android:id="@+id/ivLoginHidePassword"
                   android:layout_centerVertical="true"
                   android:layout_alignParentEnd="true"/>-->
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_below="@id/etLoginPassword"
              android:background="@android:color/white"/>
    </RelativeLayout>

    <TextView
            android:layout_marginTop="25dp"
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/forgetYourPassword"
            android:layout_below="@+id/rlLoginPassword"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_above="@+id/btnLogin"
                  android:gravity="center">
        <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/dontHaveAccount"
                android:layout_above="@+id/btnLogin"
                android:layout_marginBottom="15dp"/>
        <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:id="@+id/tvLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                android:layout_above="@+id/btnLogin"
                android:layout_toEndOf="@id/tvAccount"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>
    </LinearLayout>
    <Button
            android:id="@+id/btnLogin" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="@drawable/btn_primary_dark"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>